# repo_helper

./: .bumpversion.cfg  .gitignore  .imgbotconfig  .isort.cfg  .pre-commit-config.yaml  .readthedocs.yml  .travis.yml  CONTRIBUTING.md  CONTRIBUTING.rst  MANIFEST.in  README.md  README.rst  __pkginfo__.py  autopep8_E302_test.py  classifiers  formate.toml  generate_schema.py  git_helper.yml  justfile  lint_roller.sh  pyproject.toml  repo_helper.yml  requirements.txt  rh_sphinx_theme_style.css  schema.py  setup.cfg  setup.py  smoke_test.py  stubs.txt  tox.ini
.ci/: copy_pypi_2_github.py
.dependabot/: config.yml
.github/: actions_build_conda.sh  actions_deploy_conda.sh  auto_assign.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: codeql-analysis.yml  conda_ci.yml  flake8.yml  mypy.yml  octocheese.yml  python_ci.yml  python_ci_linux.yml  python_ci_macos.yml  rustpython_ci_linux.yml  safety.yml  smoke_test.yml
doc-source/: Building.rst  Source.rst  autoconfig.py  conf.py  config.rst  config_old.rst  contributing.rst  contributor-guide.rst  index.rst  license.rst  requirements.txt  tox_conf_directive.py
doc-source/_static/: style.css
doc-source/_templates/: layout.html
doc-source/api/: __main__.rst  blocks.rst  bots.rst  build.rst  ci_cd.rst  click-tools.rst  conda.rst  config_vars.rst  core.rst  docs.rst  git-tools.rst  gitignore.rst  index.rst  init_repo.rst  linting.rst  packaging.rst  readme.rst  release.rst  requirements-tools.rst  shields.rst  templates.rst  testing.rst  utils.rst  yaml_parser.rst
doc-source/config/: conda & anaconda.rst  documentation.rst  index.rst  metadata.rst  optional features.rst  other.rst  packaging.rst  python versions.rst  testing.rst  tox.rst  travis.rst
doc-source/usage/: add.rst  broomstick.rst  build.rst  init.rst  make_recipe.rst  pycharm-schema.rst  pypi-secure.rst  release.rst  repo-helper.rst  show.rst  suggest.rst  wizard.rst
git_helper/: __init__.py  __main__.py  blocks.py  bots.py  ci_cd.py  config_vars.py  config_vars.pyi  configuration.py  core.py  docs.py  git_helper_schema.json  gitignore.py  init_repo.py  linting.py  packaging.py  readme.py  shields.py  status.rst  templates.py  testing.py  utils.py  yaml_parser.py
git_helper/init_repo_files/: Building.rst  README.rst  Source.rst  __init__.py  docs.rst  index.rst
git_helper/templates/: .travis.yml  Source.rst  __pkginfo__.py  bug_report.md  conf.py  copy_pypi_2_github._py  copy_pypi_2_github.py  feature_request.md  isort.cfg  lint_roller.sh  make_conda_recipe._py  make_conda_recipe.py  setup.py  tox.ini  tox_template.ini  travis_build_conda.sh  travis_deploy_conda.sh
old_build_tests/: builder_smoke_test.py  requirements.txt  smoke_test.py  smoke_test.yml  test_build.py  test_builder.py
old_build_tests/test_builder_/: test_write_entry_points.txt  test_write_metadata  test_write_wheel  test_write_wheel.yml
repo_helper/: __init__.py  __main__.py  _docs_shields.py  blocks.py  bots.py  build.py  ci_cd.py  cli.py  click_tools.py  conda.py  config_vars.py  config_vars.pyi  configeditor.py  configupdater2.py  configuration.py  core.py  docs.py  git_tools.py  gitignore.py  init_repo.py  linting.py  log.py  packaging.py  readme.py  release.py  repo_helper_schema.json  requirements_tools.py  shields.py  templates.py  testing.py  utils.py  wizard.py  yaml_parser.py
repo_helper/blocks/: __init__.py  docs_installation_block_template.rst  docs_links_block_template.rst  docs_shields_block_template.rst  readme_installation_block_no_pypi_template.rst  readme_installation_block_template.rst  shields_block_template.rst
repo_helper/cli/: __init__.py  options.py  utils.py
repo_helper/configuration/: __init__.py  conda_anaconda.py  documentation.py  metadata.py  optional_features.py  other.py  packaging.py  python_versions_.py  testing.py  travis.py  utils.py
repo_helper/files/: .isort.cfg  __init__.py  bots.py  ci_cd.py  contributing.py  docs.py  gitignore.py  isort.cfg  linting.py  old.py  packaging.py  pre_commit.py  readme.py  testing.py
repo_helper/init_repo_files/: README.rst  __init__.py  bsd2.py  bsd3.py  generic.py  gpl2.py  gpl2_plus._py  gpl2_plus.py  gpl3.py  gpl3_plus._py  gpl3_plus.py  index.rst  lgpl3.py  lgpl3_plus.py  mit._py  mit.py
repo_helper/templates/: .travis.yml  CONTRIBUTING.md  CONTRIBUTING.rst  PULL_REQUEST_TEMPLATE.md  Source.rst  __init__.py  __pkginfo__._py  actions_build_conda.sh  actions_deploy_conda.sh  bug_report.md  conda_recipe.yaml  conf._py  copy_pypi_2_github._py  docs_test_action.yml  feature_request.md  flake8.yml  github_ci.yml  github_ci_rustpython.yml  github_conda_ci.yml  justfile.t  license.rst  lint_roller._sh  lint_roller.sh  make_conda_recipe._py  manylinux_build.yml  milestones._py  mypy.yml  octocheese.yml  pre-commit-config.yaml  pyproject.toml  setup._py  setup.cfg  setup_template.cfg  stale_bot.yaml  tox_template.ini  travis.yml  travis_build_conda.sh  travis_deploy_conda.sh  travis_not_pure_python.yml
repo_helper/testing/: __init__.py  repo_helper_example.yml
tests/: __init__.py  classes.py  common.py  conftest.py  repo_helper.yml_  requirements.txt  test_blocks.py  test_bots.py  test_build.py  test_builder.py  test_ci_cd.py  test_config_vars.py  test_configuration.py  test_core.py  test_docs.py  test_git_tools.py  test_gitignore.py  test_import_main.py  test_init_repo.py  test_linting.py  test_packaging.py  test_requirements_tools.py  test_shields.py  test_testing.py  test_utils.py  test_wizard.py  test_yaml_parser.py
tests/test_blocks/: test_create_docs_install_block_case_1_.rst  test_create_docs_links_block.rst  test_create_readme_install_block_case_2_.rst  test_create_readme_install_block_case_3_.rst  test_create_short_desc_block.rst
tests/test_blocks_/: test_create_docs_install_block_case_1_.rst  test_create_docs_install_block_case_2_.rst  test_create_docs_install_block_case_3_.rst  test_create_docs_install_block_case_4_.rst  test_create_docs_links_block.rst  test_create_readme_install_block_case_1_.rst  test_create_readme_install_block_case_2_.rst  (+6 more)
(+913 files in other folders)
