[build-system]
requires = [ "setuptools>=40.6.0", "wheel>=0.34.2",]
build-backend = "setuptools.build_meta"

[project]
name = "repo_helper"
version = "2021.8.11"
description = "A tool to manage configuration files, build scripts etc. across multiple projects."
readme = "README.rst"
keywords = [ "configuration",]
dynamic = [ "requires-python", "classifiers", "dependencies",]

[[project.authors]]
name = "Dominic Davis-Foster"
email = "dominic@davis-foster.co.uk"


[project.license]
file = "LICENSE"

[project.urls]
Homepage = "https://github.com/repo-helper/repo_helper"
"Issue Tracker" = "https://github.com/repo-helper/repo_helper/issues"
"Source Code" = "https://github.com/repo-helper/repo_helper"
Documentation = "https://docs.repo-helper.uk"

[project.scripts]
repo_helper = "repo_helper.__main__:main"
repo-helper = "repo_helper.__main__:main"

[project.optional-dependencies]
testing = [
    "check-wheel-contents>=0.2.0",
    "coincidence>=0.2.0",
    "docutils==0.16",
    "pytest>=6.0.0",
    "twine>=3.2.0",
]
all = [
    "check-wheel-contents>=0.2.0",
    "coincidence>=0.2.0",
    "docutils==0.16",
    "pytest>=6.0.0",
    "twine>=3.2.0",
]

[tool.mkrecipe]
extras = []
conda-channels = [ "conda-forge", "domdfcoding",]
license-key = "LGPL-3.0-or-later"

[tool.dep_checker]
namespace_packages = [ "ruamel.yaml",]
allowed_unused = [ "idna",]

[tool.sphinx-pyproject]
github_username = "repo-helper"
github_repository = "repo_helper"
author = "Dominic Davis-Foster"
project = "repo-helper"
copyright = "2020-2021 Dominic Davis-Foster"
language = "en"
package_root = "repo_helper"
extensions = [
    "sphinx_toolbox",
    "sphinx_toolbox.more_autodoc",
    "sphinx_toolbox.more_autosummary",
    "sphinx_toolbox.documentation_summary",
    "sphinx_toolbox.tweaks.param_dash",
    "sphinx_toolbox.tweaks.latex_layout",
    "sphinx_toolbox.tweaks.latex_toc",
    "sphinx.ext.intersphinx",
    "sphinx.ext.mathjax",
    "sphinxcontrib.extras_require",
    "sphinx.ext.todo",
    "sphinxemoji.sphinxemoji",
    "notfound.extension",
    "sphinx_copybutton",
    "sphinxcontrib.default_values",
    "sphinxcontrib.toctree_plus",
    "sphinx_debuginfo",
    "sphinx_licenseinfo",
    "seed_intersphinx_mapping",
    "configconfig.autoconfig",
    "sphinx_click",
    "sphinx_autofixture",
]
sphinxemoji_style = "twemoji"
gitstamp_fmt = "%d %b %Y"
templates_path = [ "_templates",]
html_static_path = [ "_static",]
source_suffix = ".rst"
master_doc = "index"
suppress_warnings = [ "image.nonlocal_uri",]
pygments_style = "default"
html_theme = "domdf_sphinx_theme"
html_theme_path = [ "../..",]
html_show_sourcelink = true
toctree_plus_types = [
    "class",
    "confval",
    "data",
    "directive",
    "enum",
    "exception",
    "flag",
    "function",
    "namedtuple",
    "protocol",
    "role",
    "typeddict",
]
add_module_names = false
hide_none_rtype = true
all_typevars = true
overloads_location = "bottom"
autodoc_exclude_members = [
    "__dict__",
    "__class__",
    "__dir__",
    "__weakref__",
    "__module__",
    "__annotations__",
    "__orig_bases__",
    "__parameters__",
    "__subclasshook__",
    "__init_subclass__",
    "__attrs_attrs__",
    "__init__",
    "__new__",
    "__getnewargs__",
    "__abstractmethods__",
    "__hash__",
]

[tool.whey]
base-classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Version Control :: Git",
    "Topic :: System :: Archiving :: Packaging",
    "Topic :: System :: Software Distribution",
    "Topic :: Utilities",
    "Typing :: Typed",
]
python-versions = [ "3.6", "3.7", "3.8", "3.9",]
python-implementations = [ "CPython", "PyPy",]
platforms = [ "Windows", "macOS", "Linux",]
license-key = "LGPL-3.0-or-later"
additional-files = [
    "include repo_helper/testing/repo_helper_example.yml",
    "recursive-include repo_helper/templates *",
    "recursive-include repo_helper/blocks *.rst",
    "recursive-include repo_helper/init_repo_files *",
    "include repo_helper/files/isort.cfg",
    "include repo_helper/repo_helper_schema.json",
]

[tool.mypy]
python_version = "3.6"
namespace_packages = true
check_untyped_defs = true
warn_unused_ignores = true
no_implicit_optional = true
incremental = false

[tool.dep_checker.name_mapping]
attrs = "attr"
ruamel-yaml = "ruamel.yaml"
