# This file is managed by 'repo_helper'.
# You may add new sections, but any changes made to the following sections will be lost:
#     * metadata
#     * options
#     * options.packages.find
#     * mypy

[metadata]
name = repo_helper
author = Dominic Davis-Foster
author_email = dominic@davis-foster.co.uk
license = GNU Lesser General Public License v3 or later (LGPLv3+)
keywords =
long_description = file: README.rst
long_description_content_type = text/x-rst
platforms = Windows, macOS, Linux
url = https://github.com/domdfcoding/repo_helper
project_urls =
    Documentation = https://repo_helper.readthedocs.io
    Issue_Tracker = https://github.com/domdfcoding/repo_helper/issues
    Source_Code = https://github.com/domdfcoding/repo_helper
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Utilities
    Typing :: Typed

[options]
python_requires = >=3.6.1
zip_safe = False
include_package_data = True
packages = find:

[options.packages.find]
exclude =
    tests
    tests.*
    doc-source

[mypy]
python_version = 3.6
namespace_packages = True
check_untyped_defs = True
warn_unused_ignores = True
incremental = False

[options.entry_points]
console_scripts =
    repo_helper = repo_helper.__main__:main
    repo-helper = repo_helper.__main__:main
