# This file is managed by 'repo_helper'.
# You may add new sections, but any changes made to the following sections will be lost:
#     * metadata
#     * options
#     * options.packages.find
#     * mypy
#     * options.entry_points

[metadata]
name = repo_helper
version = 2021.6.13
author = Dominic Davis-Foster
author_email = dominic@davis-foster.co.uk
license = GNU Lesser General Public License v3 or later (LGPLv3+)
keywords = configuration
long_description = file: README.rst
long_description_content_type = text/x-rst
platforms = Windows, macOS, Linux
url = https://github.com/repo-helper/repo_helper
project_urls =
    Documentation = https://docs.repo-helper.uk
    Issue Tracker = https://github.com/repo-helper/repo_helper/issues
    Source Code = https://github.com/repo-helper/repo_helper
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    Topic :: Software Development :: Build Tools
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Software Development :: Version Control :: Git
    Topic :: System :: Archiving :: Packaging
    Topic :: System :: Software Distribution
    Topic :: Utilities
    Typing :: Typed

[options]
python_requires = >=3.6.1
zip_safe = False
include_package_data = True
packages = find:

[options.packages.find]
exclude =
    doc-source
    tests
    tests.*

[mypy]
python_version = 3.6
namespace_packages = True
check_untyped_defs = True
warn_unused_ignores = True
incremental = False

[options.entry_points]
console_scripts =
    repo_helper = repo_helper.__main__:main
    repo-helper = repo_helper.__main__:main
