[metadata]
name = {{ pypi_name }}
description = {{ short_desc }}
author = {{ author }}
author_email = {{ email }}
license = {{ license }}
keywords =
    {{ '\n    '.join(keywords) }}
long_description = file: README.rst
long_description_content_type = text/x-rst
platforms =
    {{ '\n    '.join(platforms) }}
url = https://github.com/{{ username }}/{{ repo_name }}
project_urls =
    Documentation = https://{{ repo_name }}.readthedocs.io
    Issue_Tracker = https://github.com/{{ username }}/{{ repo_name }}/issues
    Source_Code = https://github.com/{{ username }}/{{ repo_name }}
classifiers =
    {% for classifier in classifiers %}{{ classifier }}
    {% endfor %}


[options]
python_requires = >={{ min_py_version }}
zip_safe = False
include_package_data = True
{% if stubs_package %}packages = {{ import_name }}-stubs
{% else %}packages = find:
{% endif %}

[options.packages.find]
exclude =
    {{ tests_dir }}
    {{ tests_dir }}.*
    {{ docs_dir }}

{% if console_scripts %}
[options.entry_points]
console_scripts =
    {% for script in console_scripts %}{{ script }}
    {% endfor %}
{% endif %}
